# libxint

./: .hgignore  Makefile.am  README  README.md  configure.ac
examples/: Makefile.am  basic.cpp  fibonacci.cpp  prime-test.cpp
include/libxint/: Makefile.am  eval-addition.hpp  eval-assignment.hpp  eval-bits.hpp  eval-comparison.hpp  eval-division.hpp  eval-inc-dec.hpp  eval-io.hpp  eval-multiplication.hpp  eval-subtraction.hpp  limits.hpp  literals.hpp  operators.hpp  prime.hpp  random.hpp  stdlib.hpp  storage.hpp  traits.hpp  types.hpp  uint-casting.hpp  uint-constructors.hpp  uint-conversions.hpp  uint-operators.hpp  uint-serialization.hpp  uint.hpp  utils.hpp
tests/: Makefile.am  addition.cpp  constructors.cpp  division.cpp  multiplication.cpp  prime.cpp  serialization.cpp  shifting.cpp  stdlib.cpp  subtraction.cpp
tests/catch2/: Makefile.am
tests/utils/: Makefile.am  random.cpp  random.hpp
