# include/libxint/Makefile.am

xintdir = $(includedir)/libxint

xint_HEADERS = \
	eval-addition.hpp \
	eval-assignment.hpp \
	eval-bits.hpp \
	eval-comparison.hpp \
	eval-division.hpp \
	eval-inc-dec.hpp \
	eval-io.hpp \
	eval-subtraction.hpp \
	stdlib.hpp \
	storage.hpp \
	types.hpp \
	uint-casting.hpp \
	uint-constructors.hpp \
	uint-operators.hpp \
	uint-serialization.hpp \
	uint.hpp \
	utils.hpp
