# include/libxint/Makefile.am

xintdir = $(includedir)/libxint

xint_HEADERS = \
	eval-addition.hpp \
	eval-assignment.hpp \
	eval-bits.hpp \
	eval-comparison.hpp \
	eval-division.hpp \
	eval-inc-dec.hpp \
	eval-io.hpp \
	eval-multiplication.hpp \
	eval-subtraction.hpp \
	limits.hpp \
	operators.hpp \
	prime.hpp \
	random.hpp \
	stdlib.hpp \
	storage.hpp \
	traits.hpp \
	types.hpp \
	uint-constructors.hpp \
	uint-conversions.hpp \
	uint-serialization.hpp \
	uint.hpp \
	utils.hpp
